Fixed drilldown bug on mobile.

--- a/source/css/scss/objects/_nav-foundation.scss
+++ b/source/css/scss/objects/_nav-foundation.scss
@@ -114,7 +114,7 @@
   transition: -webkit-transform 0.15s linear;
   transition: transform 0.15s linear; }
   .is-drilldown-submenu.is-active {
-    z-index: 1;
+    z-index: 1001;
     display: block;
     -webkit-transform: translateX(-100%);
         -ms-transform: translateX(-100%);
